# cwmsreader

./: .gitattributes  .gitignore  README.md
src/: Makefile-cwms  Makefile-cwmsreader
src/BasicDialogueAgent/: cps-agent-states.lisp
src/CWMSAgent/: CWMS.lisp  CWMSgenerator.lisp  CWMSrules.lisp  Makefile  code.lisp  cwmsAgent.lisp  defsys.lisp  messages.lisp  operators.lisp  planner.lisp  structures.lisp  task-manager.lisp  taskDecisionFunctions.lisp  tasklibrary.lisp  warn.lisp
src/CollaborativeStateManager/: CollaborativeStateManager.java
src/DocumentRepo/: .cvsignore  DB.java  DocumentList.java  DocumentRepo.java  Makefile  README.html  StreamForward.java  schema.sqlite
src/HeadlessWeb/: .cvsignore  HeadlessWeb.js  Makefile  README.txt  WebProcedure.js
src/PDFExtractor/: .cvsignore  ActionWithButton.java  Cell.java  CellProperties.java  Document.java  DocumentMenu.java  EditedCell.java  HTMLBuilder.java  HasID.java  HasSortOrders.java  IntervalRelation.java  LearningGUI.java  Makefile  MergedCell.java  PDFExtractor.java  PDFPane.java  Page.java  README.html  Region.java  ResultSet.java  SpanTable.java  SyntheticCell.java  Table.java  TableEditMenu.java  TableSelection.java  TableSelectionListener.java  TableSelectionModel.java  TextChunker.java  TextMatch.java  VisibilityFilter.java  tabula.class.violet
src/PDFLearn/: .cvsignore  Makefile  README.html  constraints.lisp  defsys.lisp  edit.lisp  find.lisp  get-annotation-sentences.lisp  (+8 more)
src/config/javascript/: Makefile.in  common.mk  configure  configure.ac  defs.mk.in  lib.mk  prog.mk  run-javascript-app.sh
(+85 files in other folders)
